--- a/Select best Model SVM.ipynb
+++ b/Select best Model SVM.ipynb
@@ -2683,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "id": "529de98d-5c85-4bf2-ad5a-b9b15c866fd5",
    "metadata": {},
    "outputs": [
@@ -2691,7 +2691,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Device Model for App Usage Time (min/day):\n",
+      "Enter App Usage Time for App Usage Time (min/day):\n",
       "Options:0-max (numeric value)\n"
      ]
     },
@@ -2699,14 +2699,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the corresponding number:  2345\n"
+      "Enter the corresponding number:  523\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Device Model for Screen On Time (hours/day):\n",
+      "Enter Screen On Time for Screen On Time (hours/day):\n",
       "Options:0-max (numeric value)\n"
      ]
     },
@@ -2714,14 +2714,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the corresponding number:  2313\n"
+      "Enter the corresponding number:  10.5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Device Model for Battery Drain (mAh/day):\n",
+      "Enter Battery Drain for Battery Drain (mAh/day):\n",
       "Options:0-max (numeric value)\n"
      ]
     },
@@ -2729,14 +2729,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the corresponding number:  22332\n"
+      "Enter the corresponding number:  2460\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Device Model for Number of Apps Installed:\n",
+      "Enter 'Number of Apps Installed for Number of Apps Installed:\n",
       "Options:0-max (numeric value)\n"
      ]
     },
@@ -2744,14 +2744,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the corresponding number:  23\n"
+      "Enter the corresponding number:  99\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Device Model for Data Usage (MB/day):\n",
+      "Enter Data Usage for Data Usage (MB/day):\n",
       "Options:0-max (numeric value)\n"
      ]
     },
@@ -2759,14 +2759,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the corresponding number:  2345\n"
+      "Enter the corresponding number:  1787\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2345, 2313, 22332, 23, 2345]\n"
+      "[523, 10.5, 2460, 99, 1787]\n"
      ]
     }
    ],
@@ -2776,27 +2776,27 @@
     "for i in load_modle.feature_names_in_:\n",
     "    \n",
     "    if i=='App Usage Time (min/day)':\n",
-    "        print(f\"Enter Device Model for {i}:\")\n",
+    "        print(f\"Enter App Usage Time for {i}:\")\n",
     "        print(\"Options:0-max (numeric value)\")\n",
     "        model = int(input(\"Enter the corresponding number: \"))\n",
     "        get_inputvalue.append(model)\n",
     "    if i=='Screen On Time (hours/day)':\n",
-    "        print(f\"Enter Device Model for {i}:\")\n",
+    "        print(f\"Enter Screen On Time for {i}:\")\n",
     "        print(\"Options:0-max (numeric value)\")\n",
-    "        model = int(input(\"Enter the corresponding number: \"))\n",
+    "        model = float(input(\"Enter the corresponding number: \"))\n",
     "        get_inputvalue.append(model)\n",
     "    if i=='Battery Drain (mAh/day)':\n",
-    "        print(f\"Enter Device Model for {i}:\")\n",
+    "        print(f\"Enter Battery Drain for {i}:\")\n",
     "        print(\"Options:0-max (numeric value)\")\n",
     "        model = int(input(\"Enter the corresponding number: \"))\n",
     "        get_inputvalue.append(model)\n",
     "    if i=='Number of Apps Installed':\n",
-    "        print(f\"Enter Device Model for {i}:\")\n",
+    "        print(f\"Enter 'Number of Apps Installed for {i}:\")\n",
     "        print(\"Options:0-max (numeric value)\")\n",
     "        model = int(input(\"Enter the corresponding number: \"))\n",
     "        get_inputvalue.append(model)\n",
     "    if i=='Data Usage (MB/day)':\n",
-    "        print(f\"Enter Device Model for {i}:\")\n",
+    "        print(f\"Enter Data Usage for {i}:\")\n",
     "        print(\"Options:0-max (numeric value)\")\n",
     "        model = int(input(\"Enter the corresponding number: \"))\n",
     "        get_inputvalue.append(model)\n",
@@ -2806,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 97,
    "id": "251c4d4b-9b73-4eb1-9a1f-91f4eb94d2c7",
    "metadata": {},
    "outputs": [
@@ -2825,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "id": "cd5bd188-6670-4afe-85ed-df5d24d7d62c",
    "metadata": {},
    "outputs": [
@@ -2835,7 +2835,7 @@
        "np.int64(5)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2846,7 +2846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "id": "00cf4324-dd4c-4399-80cd-bda4382a4160",
    "metadata": {},
    "outputs": [],
@@ -2862,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "id": "f896f2e4-934a-4f07-aaac-612ac9a6c4f4",
    "metadata": {},
    "outputs": [
@@ -2872,7 +2872,7 @@
        "'5-Extreme Usage'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
