--- a/Mobile Usage_with_correction.ipynb
+++ b/Mobile Usage_with_correction.ipynb
@@ -1595,255 +1595,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 514,
    "id": "576262c9-e1ff-4adb-b7a7-c9e019fd1976",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Device Model</th>\n",
-       "      <th>Operating System</th>\n",
-       "      <th>App Usage Time (min/day)</th>\n",
-       "      <th>Screen On Time (hours/day)</th>\n",
-       "      <th>Battery Drain (mAh/day)</th>\n",
-       "      <th>Number of Apps Installed</th>\n",
-       "      <th>Data Usage (MB/day)</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>User Behavior Class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>393</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>1872</td>\n",
-       "      <td>67</td>\n",
-       "      <td>1122</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>268</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>1331</td>\n",
-       "      <td>42</td>\n",
-       "      <td>944</td>\n",
-       "      <td>47</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>154</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>761</td>\n",
-       "      <td>32</td>\n",
-       "      <td>322</td>\n",
-       "      <td>42</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>239</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>1676</td>\n",
-       "      <td>56</td>\n",
-       "      <td>871</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>187</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>1367</td>\n",
-       "      <td>58</td>\n",
-       "      <td>988</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>695</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>92</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1082</td>\n",
-       "      <td>26</td>\n",
-       "      <td>381</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>696</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>316</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1201</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>697</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>99</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>942</td>\n",
-       "      <td>22</td>\n",
-       "      <td>457</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>698</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>431</td>\n",
-       "      <td>13</td>\n",
-       "      <td>224</td>\n",
-       "      <td>44</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>699</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>212</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>1306</td>\n",
-       "      <td>49</td>\n",
-       "      <td>828</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>700 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Device Model  Operating System  App Usage Time (min/day)  \\\n",
-       "0               0                 0                       393   \n",
-       "1               1                 0                       268   \n",
-       "2               2                 0                       154   \n",
-       "3               0                 0                       239   \n",
-       "4               3                 1                       187   \n",
-       "..            ...               ...                       ...   \n",
-       "695             3                 1                        92   \n",
-       "696             2                 0                       316   \n",
-       "697             0                 0                        99   \n",
-       "698             4                 0                        62   \n",
-       "699             1                 0                       212   \n",
-       "\n",
-       "     Screen On Time (hours/day)  Battery Drain (mAh/day)  \\\n",
-       "0                           6.4                     1872   \n",
-       "1                           4.7                     1331   \n",
-       "2                           4.0                      761   \n",
-       "3                           4.8                     1676   \n",
-       "4                           4.3                     1367   \n",
-       "..                          ...                      ...   \n",
-       "695                         3.9                     1082   \n",
-       "696                         6.8                     1965   \n",
-       "697                         3.1                      942   \n",
-       "698                         1.7                      431   \n",
-       "699                         5.4                     1306   \n",
-       "\n",
-       "     Number of Apps Installed  Data Usage (MB/day)  Age  Gender  \\\n",
-       "0                          67                 1122   40       1   \n",
-       "1                          42                  944   47       0   \n",
-       "2                          32                  322   42       1   \n",
-       "3                          56                  871   20       1   \n",
-       "4                          58                  988   31       0   \n",
-       "..                        ...                  ...  ...     ...   \n",
-       "695                        26                  381   22       1   \n",
-       "696                        68                 1201   59       1   \n",
-       "697                        22                  457   50       0   \n",
-       "698                        13                  224   44       1   \n",
-       "699                        49                  828   23       0   \n",
-       "\n",
-       "     User Behavior Class  \n",
-       "0                      4  \n",
-       "1                      3  \n",
-       "2                      2  \n",
-       "3                      3  \n",
-       "4                      3  \n",
-       "..                   ...  \n",
-       "695                    2  \n",
-       "696                    4  \n",
-       "697                    2  \n",
-       "698                    1  \n",
-       "699                    3  \n",
-       "\n",
-       "[700 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 495,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data"
+    "data.to_csv('user_behavior_dataset_preprocessed.csv', index=False)"
    ]
   },
   {
