--- a/PreProcess_Data/Pre_Process_data.ipynb
+++ b/PreProcess_Data/Pre_Process_data.ipynb
@@ -360,11 +360,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mojayara\\AppData\\Local\\Temp\\ipykernel_32020\\1270223768.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\mojayara\\AppData\\Local\\Temp\\ipykernel_22548\\1270223768.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Device Model']=data['Device Model'].replace(map_model)\n",
-      "C:\\Users\\mojayara\\AppData\\Local\\Temp\\ipykernel_32020\\1270223768.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\mojayara\\AppData\\Local\\Temp\\ipykernel_22548\\1270223768.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Operating System']=data['Operating System'].replace(map_OS)\n",
-      "C:\\Users\\mojayara\\AppData\\Local\\Temp\\ipykernel_32020\\1270223768.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\mojayara\\AppData\\Local\\Temp\\ipykernel_22548\\1270223768.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Gender']=data['Gender'].replace(map_gender)\n"
      ]
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4f20049b-67aa-46dc-a846-d148fd01cae0",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
        "[700 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,8 +633,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "10e8ea33-2ad5-4807-99a7-2a83d2811db5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 700 entries, 0 to 699\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   Device Model                700 non-null    int64  \n",
+      " 1   Operating System            700 non-null    int64  \n",
+      " 2   App Usage Time (min/day)    700 non-null    int64  \n",
+      " 3   Screen On Time (hours/day)  700 non-null    float64\n",
+      " 4   Battery Drain (mAh/day)     700 non-null    int64  \n",
+      " 5   Number of Apps Installed    700 non-null    int64  \n",
+      " 6   Data Usage (MB/day)         700 non-null    int64  \n",
+      " 7   Age                         700 non-null    int64  \n",
+      " 8   Gender                      700 non-null    int64  \n",
+      " 9   User Behavior Class         700 non-null    int64  \n",
+      "dtypes: float64(1), int64(9)\n",
+      "memory usage: 54.8 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4fb662a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -642,7 +676,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -656,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
